deployment.yml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: python-hello-deployment
spec:
  selector:
    matchLabels:
      app: python-hello
  replicas: 2 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod-nginx.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        app: python-hello
    spec:
      containers:
      - name: python-hello
        # image name inside dockerhub
        image: "ydd9/python-hello"
        ports:
        - containerPort: 8080
