ingress.yml
---
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - test.com
    secretName: test-secret
  rules:
  - host: test.com
    http:
      paths:
      - path: /dev
        backend:
          serviceName: dev-svc
          servicePort: 80
      - path: /prod
        backend:
          serviceName: prod-svc
          servicePort: 80
